# Threadix

./: .gitignore  HLD.md  LLD.md  README.md  docker-compose.yml
Backend/services/auth-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
Backend/services/auth-service/alembic/: env.py
Backend/services/auth-service/alembic/versions/: 1ac2d4dde69a_create_users_table.py  2c06a3338c82_add_role_column.py  d36ed3786a93_add_avatar_url_column.py  e1a2b3c4d5e6_add_bio_column.py
Backend/services/auth-service/app/: main.py
Backend/services/auth-service/app/api/: deps.py
Backend/services/auth-service/app/core/: cloudinary_config.py  config.py  dependencies.py  security.py
Backend/services/auth-service/app/db/: database.py  models.py  redis.py  schemas.py
Backend/services/auth-service/app/repositories/: user_repository.py
Backend/services/auth-service/app/services/: auth_service.py  email_services.py  password_services.py  user_service.py
Backend/services/auth-service/app/utils/: logger.py
Backend/services/auth-service/tests/: test_auth_service.py  test_hashing.py  test_schemas.py  test_security.py
Backend/services/notification-service/: .env.example  Dockerfile  pyproject.toml
Backend/services/notification-service/app/: main.py
Backend/services/notification-service/app/core/: config.py  dependencies.py  security.py
Backend/services/notification-service/app/db/: database.py  models.py  redis.py  schemas.py
Backend/services/notification-service/tests/: test_consumer.py  test_delivery.py  test_notification_repository.py  test_schemas.py
(+105 files in other folders)
