[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "pydantic[email]",
    "passlib[bcrypt]",
    "PyJWT",
    "python-dotenv",
    "redis",
    "cloudinary",
]
